Added options to the user list so managers and admins can fire/hire/ban. Some functions need a little testing.

--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -80,7 +80,7 @@ else
             }
             case AccountComponent.UserList:
             {
-                <UserList></UserList>
+                <UserList UserId="@(int.Parse(user.Claims.First(c => c.Type == ClaimTypes.NameIdentifier).Value))"></UserList>
                 break;
             }
             case AccountComponent.ScheduleRequests:
