--- a/Components/Pages/CreateScheduleDialog.razor
+++ b/Components/Pages/CreateScheduleDialog.razor
@@ -286,7 +286,7 @@
 
         var acc_not = new AccountNotification
             {
-                AccountId = Barber.Bshop.ManagerAccountId,
+                AccountId = Barber.Bshop.ManagerAccountId.Value,
                 NotificationId = not.Id
             };
 
